assets/css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
}

.big-container{
    max-width: 1180px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.container{
    max-width: 1080px;
    display: flex;
    justify-content: center;
    align-items: center;
}

button{
    border: none;
    background-color: transparent;
    padding: 8px 14px;
    font-size: 16px;
    cursor: pointer;
}

img{
    max-width: 100%;
}

.btn-blue{
    background-color: #1961FF;
    color: #fff;
}

.btn-black-border{
    border: 1px solid black;
}

.btn-white{
    background-color: #fff;
}
/* HEADER */

header{
    padding: 30px;
    position: fixed;
    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
    font-weight: 300;
    font-size: 18px;
    background-color: #fff;
    z-index: 2;
}

header .row > :nth-child(2n){
    margin-left: 30px;
    margin-right: 30px;
}

/* end HEADER */

/* UTILITY */
.content-left{
    justify-content: flex-start;
    align-items: flex-start;
}

h1{
    font-weight: 900;
    font-size: 70px;
}

h2{
    font-weight: 600;
    font-size: 40px;
}

h3{
    font-weight: 600;
    font-size: 24px;
}

.row{
    display: flex;
    align-items: center;
    justify-content: center;
}

.h-100{
    height: 100%;
}

.w-100{
    width: 100%;
}

.w-70{
    width: 70%;
}

.w-60{
    width: 60%;
}

.w-50{
    width: 50%;
}

.w-30{
    width: 30%;
}

.w-20{
    width: 20%;
}

.w-10{
    width: 10%;
}

.space-between{
    justify-content: space-between;
}

.space-between-start{
    justify-content: space-between;
    align-items: flex-start;
}

.padding-120{
    padding: 120px;
}

.padding-70{
    padding: 70px;
}

.padding-50{
    padding: 50px;
}

.padding-top-70{
    padding-top: 70px;
}

.padding-left-0{
    padding-left: 0;
}

.padding-right-30{
    padding-right: 30px;
}

.margin-20{
    margin: 20px;
}

.margin-top-20{
    margin-top: 20px;
}

.margin-top-30{
    margin-top: 30px;
}

.margin-top-60{
    margin-top: 60px;
}

.margin-top-100{
    margin-top: 100px;
}

.column{
    flex-direction: column;
}

.size-50{
    font-size: 50px;
}

.padding-bottom-0{
    padding-bottom: 0;
}

.flex-start{
    align-items: flex-start;
    justify-content: flex-start;
}


.margin-left-50{
    margin-left: 50px;
}


.margin-left-5{
    margin-left: 5px;
}

.margin-left-0{
    margin-left: 0;
}

.padding-10{
    padding: 10px;
}

.padding-20{
    padding: 20px;
}

.padding-30{
    padding: 30px;
}

.padding-bottom-40{
    padding-bottom: 40px;
}

.center{
    justify-content: center;
    align-items: center;
}

.border-1{
    border: 1px solid rgb(183, 183, 183);
}

.border-bottom{
    border-bottom: 1px solid rgb(183, 183, 183);
}

.relative-bottom{
    position: relative;
    bottom: -50px;
}

.blue{
    color: #1961FF;
}

.wrap{
    display: flex;
    flex-wrap: wrap;
}

.stretch{
    align-items: stretch;
}
/* end UTILITY */

/* MAIN */

main{
    padding-top: 100px;
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    font-weight: 300;
    padding-bottom: 150px;
    text-align: left;
}

.blue-background{
    background-color: #B4D0E7 ;
}

.logo-container{
    display: flex;
    flex-direction: column;
    max-width: calc(100% / 6);
    flex-grow: 1;
}

.big-logo-container{
    display: flex;
    flex-direction: column;
    max-width: calc(100% / 3);
    flex-grow: 1;
}

.logo-item{
    flex-grow: 1;
    aspect-ratio: 1/1;
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo-item > *{
    width: 50%;
}

.logo-item > .column.w-100{
    width: 100%;
}

.logo-item img{
    filter: invert(1)
}

.designit-1{
    background-color: #D1E9CD;
}

.designit-2{
    background-color: #A2D39B;
}

.asu{
    background-color: #61082B;
}

.uf-florida{
    background-color: #1D93CE;
}

.topps{
    background-color: #FB1B1C;
}

.designit-3{
    background-color: #F5F5F5;
}

.wbr{
    background-color: #D5151F;
}

.lonely-planet{
    background-color: #0D2481;
}

.clear-channel{
    background-color: #FDD82F;
}

.hearst{
    background-color: #B4D0E7;
}

.magenta{
    color: #61082B;
}

/* FOOTER */

footer{
    background-color: #000000;
    padding-top: 80px;
    padding-bottom: 30px;
    display: flex;
    align-content: center;
    justify-content: center;
}

footer .column.w-20 p {
    color: white;
    line-height: 2;
}

footer .column.w-20> :first-child {
    margin-bottom: 40px;
}

footer .column.w-20 h3 {
    color: white;
}

.grey-color{
    color: grey;
}

footer .row.grey-color> :nth-child(2n){
    margin-left: 10px;
    margin-right: 10px;
}

